Fix T57316: material preview icons not updating.

The editors update callback was getting the COW datablock, it should be the
original where the preview icons are stored.