source/blender/makesrna/intern/rna_material.c
@@ -114,27 +114,8 @@ static void rna_Material_update_previews(Main *UNUSED(bmain), Scene *UNUSED(scen
 static void rna_MaterialGpencil_update(Main *bmain, Scene *scene, PointerRNA *ptr)
 {
 	Material *ma = ptr->id.data;
-	PreviewImage *preview = ma->preview;
 
 	rna_Material_update(bmain, scene, ptr);
-
-	/* update previews (icon and thumbnail) */
-	if (preview != NULL) {
-		bool changed = false;
-		if ((preview->flag[ICON_SIZE_ICON] & PRV_CHANGED) == 0) {
-			preview->flag[ICON_SIZE_ICON] |= PRV_CHANGED;
-			changed = true;
-		}
-
-		if ((preview->flag[ICON_SIZE_PREVIEW] & PRV_CHANGED) == 0) {
-			preview->flag[ICON_SIZE_PREVIEW] |= PRV_CHANGED;
-			changed = true;
-		}
-
-		if (changed) {
-			WM_main_add_notifier(NC_MATERIAL | ND_SHADING_PREVIEW, ma);
-		}
-	}
 	WM_main_add_notifier(NC_GPENCIL | ND_DATA, ma);
 }
 
@@ -143,7 +124,6 @@ static void rna_MaterialGpencil_nopreview_update(Main *bmain, Scene *scene, Poin
 	Material *ma = ptr->id.data;
 
 	rna_Material_update(bmain, scene, ptr);
-
 	WM_main_add_notifier(NC_GPENCIL | ND_DATA, ma);
 }
 
